--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,51 @@
-table {
-  border-collapse: collapse;
+body {
+  margin: 30px auto;
+  text-align: center;
+  background-color: #006db3;
+  box-sizing: border-box;
 }
 
-table td {
-  border: 2px solid #000;
+.cell {
+  display: inline-block;
+  border: 2px solid rgba(255, 255, 255, 0.77);
+  width: 100px;
+  height: 100px;
+  cursor: pointer;
+  color: rgba(255,255,255,0.77);
+  font-family: monospace;
+  font-size: 70px;
+  padding: 5px 10px;
+}
+
+#grid div:first-child div {
+  border-top: 0px;
+}
+
+#grid div:last-child div {
+  border-bottom: 0px;
+}
+
+#grid div div:first-child {
+  border-left: 0px;
+}
+
+#grid div div:last-child {
+  border-right: 0px;
+}
+
+#startButton {
+  margin-top: 40px;
+  padding: 10px 30px;
+  border-radius: 10px;
+  font-family: monospace;
+  font-size: 18px;
+  background-color: #fff;
+  color: #006db3;
+  transition: 0.4s all;
+}
+
+#startButton:hover {
+  background-color: rgba(0, 122, 179, 0.75);
   color: #fff;
-}
-
-table tr:first-child {
-  border-top: none;
+  cursor: pointer;
 }
