--- a/styles.css
+++ b/styles.css
@@ -1,28 +1,33 @@
 body {
-  margin: 30px auto;
-  text-align: center;
-  background-color: #006db3;
-  box-sizing: border-box;
+    max-width: 500px;
+    margin: 40px auto;
+    background-color: #006db3;
 }
 
 .cell {
   display: inline-block;
-  border: 2px solid rgba(255, 255, 255, 0.77);
-  width: 100px;
-  height: 100px;
-  cursor: pointer;
-  color: rgba(255,255,255,0.77);
-  font-family: monospace;
-  font-size: 70px;
-  padding: 5px 10px;
+  border: 2px solid #eee;
+  height: 150px;
+  width: 150px;
+  text-align: center;
+  vertical-align: middle;
+  font-size: 130px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  color: #eee;
+}
+
+.cell.wincombo {
+  background: rgba(143, 15, 202, 0.637);
 }
 
 #grid div:first-child div {
   border-top: 0px;
+  margin-bottom: 5px;
 }
 
 #grid div:last-child div {
   border-bottom: 0px;
+  margin-top: 5px;
 }
 
 #grid div div:first-child {
@@ -34,7 +39,9 @@ body {
 }
 
 #startButton {
-  margin-top: 40px;
+  position: relative;
+  display: block;
+  margin: 40px 100px;
   padding: 10px 30px;
   border-radius: 10px;
   font-family: monospace;
@@ -42,6 +49,7 @@ body {
   background-color: #fff;
   color: #006db3;
   transition: 0.4s all;
+
 }
 
 #startButton:hover {
