--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ body {
   font-size: 130px;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   color: #eee;
+  cursor: pointer;
 }
 
 .cell.wincombo {
