--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,7 @@ body {
   height: 280px;
   width: 400px;
   position:fixed;
-  display: block;
+  display: none;
   z-index: 2;
   top: 50%;
   left: 50%;
